fixes bug 219456 "proxy browsing broken on todays cvs 20030917" r=dougt sr=alecf